--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="headcontainer">
-            <h3 class="headfirst">👑The Money Tracker👑</h3>
+            <h3 class="headfirst">👑Champion The Brand👑</h3>
             <h5>100% Accuracy Milega Yaha Apko</h5>
             <!-- <h5>Redirecting to telegram channel</h5>
             <h1 class="time">10</h1>
