--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <h4 class="lasthead">IPL ALL MATCH PASS ☑</h4>
            <h4 class="lasthead">ASIA CUP ALL MATCH PASS ☑</h4>
 
-           <a href="http://t.me/+l5Cu2BrRYeQ4NDM9"><button class="btn">JOIN THE CHANNEL NOW</button></a>
+           <a href="https://t.me/+dVcgJH6IdetmYjdl"><button class="btn">JOIN THE CHANNEL NOW</button></a>
         </div>
     </div>
 
